# DC3-MWCP

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  noxfile.py  pyproject.toml
.github/workflows/: workflow.yml
docs/: ParserDevelopment.md  ParserInstallation.md  ParserTesting.md  malstruct.ipynb
mwcp/: metadata.py
src/mwcp/: __init__.py  cli.py  core.py  dispatcher.py  exceptions.py  file_object.py  metadata.py  parser.py  parser_config.yml  registry.py  report.py  report_writers.py  runner.py  testing.py
src/mwcp/config/: __init__.py  log_config.yml  schema.json  settings.toml
src/mwcp/parsers/: Executable.py  ISO.py  MachO.py  PDF.py  Python.py  Quarantined.py  RSA.py
src/mwcp/stix/: objects.py
src/mwcp/tests/: conftest.py  test_cli.py  test_disassembly.py  test_issues.py  test_legacy_reporter.py  test_metadata.py  test_parsers.py  test_registry.py  test_report.py  test_server.py  test_testing.py
src/mwcp/tests/test_cli/: parse.json
src/mwcp/tests/test_report/: report.json  report.py
src/mwcp/tools/server/: __init__.py  server.py
src/mwcp/utils/: logutil.py  machoutils.py  pecon.py  pefileutils.py
src/mwcp/utils/construct/: __init__.py  core.py  datetime_.py  helpers.py  windows_structures.py
