[build-system]
requires = ["setuptools > 61.2, < 70.0", "wheel"]

[project]
name = "mwcp"
description = "A framework for malware configuration parsers."
authors = [
    {name = "DC3", email = "dc3.tsd@us.af.mil"},
]
keywords = ["malware"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.txt"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.11"
dependencies = [
    "anytree",
    "attrs>=20.3.0",
    "bitarray",
    "cattrs>=24.1.0",
    "click>=8.3.0",
    "defusedxml",
    "dynaconf",
    "future",
    "isodate",
    "jsonschema_extractor>=1.0",
    'lief>=0.16.0;python_version>="3.9"',
    "malstruct>=3.0.20260429",
    "markupsafe",
    "packaging",
    "pandas",
    "pefile>=2019.4.18",
    "platformdirs",
    "pyasn1",
    "pyasn1_modules",
    "pyelftools",
    "pyparsing",
    "pytest>=6.0.0",
    "pytest-datadir",
    "pytest-xdist",
    "pytest-mock",
    "pytest-cov",
    "pyyaml",
    "requests",
    "ruamel.yaml",
    "tabulate[widechars]<1.0.0",
    "stix2",
    "yara-python",
    # For the server and API
    "flask",
    "pygments",
]

[project.optional-dependencies]
dragodis = ["dragodis>=1.1.0"]
kordesii = ["kordesii>=2.6.0"]
testing = ["jsonschema"]
patool = ["patool>=4.0.4"]
# Dependencies for builtin parsers.
parsers = [
    "lief>=0.17.6",
    "olefile>=0.47",
    "pycdlib>=1.16.0",
    "pycryptodome>=3.23.0",
    "rugosa>=1.3.0",
]

[project.scripts]
mwcp = "mwcp.cli:main"
poshdeob = "mwcp.utils.poshdeob:main"

[project.entry-points."mwcp.parsers"]
dc3 = "mwcp.parsers"

[project.urls]
Homepage = "https://github.com/dod-cyber-crime-center/DC3-MWCP"
Repository = "https://github.com/dod-cyber-crime-center/DC3-MWCP.git"
Changelog = "https://github.com/dod-cyber-crime-center/DC3-MWCP/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "mwcp.__version__"}

[tool.pytest.ini_options]
testpaths = ["src/mwcp/tests"]
required_plugins = [
    "pytest-datadir",
    "pytest-xdist",
    "pytest-mock",
    "pytest-cov",
]
filterwarnings = "ignore::DeprecationWarning"
addopts = "-p no:faulthandler"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "bpython>=0.26",
    "flake8>=7.3.0",
    "nox>=2026.4.10",
]
